xml/tests/testData/xml/WrongRegExpInSchema.xsd
<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema">
<xs:simpleType name="TestType">
<xs:restriction base="xs:string">
<xs:pattern value="[0-9]+-([0-9]+|<error descr="Dangling quantifier '*'">*</error>)"/>
</xs:restriction>
</xs:simpleType>
<xs:simpleType name="TestType2">
  <xs:restriction base="xs:string">
  <xs:pattern value="[0-9]+-([0-9]+|.*)"/>
  </xs:restriction>
</xs:simpleType>

</xs:schema>